Fixed view more issue for work items on iOS

--- a/Nikolai/Content/Molecules/_dialControl.scss
+++ b/Nikolai/Content/Molecules/_dialControl.scss
@@ -278,6 +278,8 @@ $button-position: (($spinner-diameter--outer - $button-diameter) / 2);
 }
 
 .nvDial--pulsing {
+    font-size: 16px;
+
     &::before {
         display: block;
         content: "Drop Dial";
