--- a/Nikolai/Content/Pages/Styles.css
+++ b/Nikolai/Content/Pages/Styles.css
@@ -810,6 +810,10 @@ $color-dial--ring3: #2294e5;*/
   opacity: 1;
 }
 
+.nvDial--pulsing {
+  font-size: 16px;
+}
+
 .nvDial--pulsing::before {
   display: block;
   content: "Drop Dial";
